standardize some settings, patch working
